[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5" 
# any version that is at least 0.8.5 but below 0.9.0, need to "cargo update" after change
# ignore the Cargo.lock file and figure out all the latest versions that fit your specifications in Cargo.toml
